Fixed button text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@
     border-radius: 0;
     background-color: #747bff;
     border: 2px solid #242424;
+    color: #ffffff;
 }
 
 .Output {
